--- a/helloworldui5/webapp/view/View1.view.xml
+++ b/helloworldui5/webapp/view/View1.view.xml
@@ -1,5 +1,5 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="sap.btp.helloworldui5.controller.View1" displayBlock="true">
-    <Page id="page" title="Hola amigos">
+    <Page id="page" title="Hola amigoss">
         <content>
             <Button xmlns="sap.m" text="Button" id="button0" press=".onPress" icon="sap-icon://accept"/><Image src="https://ui5.sap.com/resources/sap/ui/documentation/sdk/images/logo_ui5.png" width="140px" height="140px" id="image0"/>
             <CheckBox xmlns="sap.m" text="Check Box" selected="false" id="box1"/>
